[MBS-99] Optimizing jvm heap size option.